fixed layout issues

--- a/main.css
+++ b/main.css
@@ -168,6 +168,10 @@ footer {
     margin: 0 auto;
     justify-content: center;
 }
+.results-container p {
+    display: block;
+    width: 100%;
+}
 .js-trail {
     width: 40%;
     margin-left: 40px;
